[gd_scene load_steps=13 format=2]

[ext_resource path="res://Juego/naves/Estaciones/EstacionDeRecarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/naves/Estaciones/AreaDeAtraccion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/naves/Estaciones/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/naves/Estaciones/Vacio.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/naves/Estaciones/recargando.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/fuentes/Future Narro.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 62.9908
height = 146.882

[sub_resource type="Animation" id=2]
resource_name = "Activado"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaDeRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaDeRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.466667 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.415686 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Default"

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0823529, 0.266667, 0.827451, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.117647, 0.117647, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[node name="EstacionRecarga" type="Node2D" groups=[
"Minimapa",
]]
scale = Vector2( 1.5, 1.5 )
z_index = 1
script = ExtResource( 3 )

[node name="AreaDeRecarga" parent="." instance=ExtResource( 2 )]

[node name="AreaColision" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 25

[node name="ColisionEstacion" type="CollisionShape2D" parent="AreaColision"]
rotation = 1.81141
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="AreaColision"]
rotation = 1.81141
z_index = 1
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Activado"
anims/Activado = SubResource( 2 )
anims/Default = SubResource( 3 )

[node name="SonidoRecarga" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0
bus = "sfx"

[node name="SonidoSinEnergia" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -60.0
margin_top = -140.0
margin_right = 59.0
margin_bottom = -119.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="AreaDeRecarga" to="." method="_on_AreaDeRecarga_body_entered"]
[connection signal="body_exited" from="AreaDeRecarga" to="." method="_on_AreaDeRecarga_body_exited"]
[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
